--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   cupertino_icons: ^0.1.3
   otp_text_field: ^1.0.1
   dotted_line: ^2.0.2
+  get_it: ^5.0.3
+  http: ^0.12.2
 
 dev_dependencies:
   flutter_test:
@@ -70,6 +72,9 @@ flutter:
     - family: Robot
       fonts:
         - asset: fonts/roboto_medium.ttf
+    - family: sfpro
+      fonts:
+        - asset: fonts/sfpro_text_medium.ttf
 
   #   - family: Trajan Pro
   #     fonts:
