--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   http: ^0.12.2
   date_range_picker: ^1.0.5
   flutter_svg: ^0.19.0
+  shared_preferences: ^0.5.12+4
 
 dev_dependencies:
   flutter_test:
