--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   date_range_picker: ^1.0.5
   flutter_svg: ^0.19.0
   shared_preferences: ^0.5.12+4
+  sqflite:
+  path_provider:
 
 dev_dependencies:
   flutter_test:
